@@ -1,6 +1,7 @@
 2006-04-03  Guillaume Smet <guillaume-pg@smet.org>
 
 	* added a tooltip with detailed information on queries and errors
+	* only display identified statistics if different from overall
 
 2006-04-02  Guillaume Smet <guillaume-pg@smet.org>
 
